k8s/transaction-history-live/live-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: transaction-history-microservice
  namespace: m11s
  labels:
    app: transaction-history-microservice
    app.kubernetes.io/part-of: m11s
    monitoring.appd: AppD_NodeJS
spec:
  strategy:
    type: RollingUpdate
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - transaction-history-microservice
        from:
          kind: ImageStreamTag
          namespace: m11s
          name: 'transaction-history-microservice:latest'
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    matchLabels:
      app: transaction-history-microservice
      deployment: transaction-history-microservice
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: transaction-history-microservice
        deployment: transaction-history-microservice
      annotations:
        openshift.io/generated-by: jenkins-pipeline
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: transaction-history-microservice
          image: image-registry.openshift-image-registry.svc:5000/m11s/transaction-history-microservice:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          expose: true
          livenessProbe:
            failureThreshold: 64
            httpGet:
              path: /live
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 10   
          readinessProbe:
            failureThreshold: 60
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 18
            timeoutSeconds: 8                                                                
          resources:
            limits:
              cpu: 900m
              memory: 2Gi
            requests:
              cpu: 360m
              memory: 256Mi  
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
